--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,9 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
+      data-rh="true"
     />
+    <meta name="google-site-verification" content="sRXQU5fQWaQFlc3RxIfr5afbYV4OjIWzhx6HRqSaOtk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
