--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Marotya Studios - software development company"
       data-rh="true"
     />
     <meta name="google-site-verification" content="sRXQU5fQWaQFlc3RxIfr5afbYV4OjIWzhx6HRqSaOtk" />
