--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#000000" />s
     <meta
       name="description"
-      content="Marotya Studios - software development company"
+      content="Marotya Studios - software development solutions"
       data-rh="true"
     />
     <meta name="google-site-verification" content="sRXQU5fQWaQFlc3RxIfr5afbYV4OjIWzhx6HRqSaOtk" />
